--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,14 +38,31 @@ jobs:
         restore-keys: |
           ${{ runner.os }}-gradle-
       
+    - name: Cache Node modules
+      uses: actions/cache@v4
+      with:
+        path: ~/.npm
+        key: ${{ runner.os }}-node-${{ hashFiles('package-lock.json') }}
+        restore-keys: |
+          ${{ runner.os }}-node-
+      
     - name: Install Node dependencies
       run: npm ci
       
     - name: Install Capacitor CLI
       run: npm install -g @capacitor/cli
       
-    - name: Add Android platform
-      run: npx cap add android --confirm
+    - name: Initialize Capacitor (if not initialized)
+      run: |
+        if [ ! -f "capacitor.config.json" ]; then
+          npx cap init --app-id com.example.app --app-name BuilderEngine
+        fi
+      
+    - name: Add Android platform (if not added)
+      run: |
+        if [ ! -d "android" ]; then
+          npx cap add android
+        fi
       
     - name: Sync Capacitor
       run: npx cap sync android
@@ -56,8 +73,8 @@ jobs:
     - name: Build Debug APK
       run: |
         cd android
-        ./gradlew assembleDebug --no-daemon --stacktrace
-        
+        ./gradlew assembleDebug --no-daemon --stacktrace --max-workers=2
+      
     - name: Upload APK
       uses: actions/upload-artifact@v4
       with:
