--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -55,7 +55,7 @@ jobs:
     - name: Initialize Capacitor (if not initialized)
       run: |
         if [ ! -f "capacitor.config.json" ]; then
-          npx cap init --app-id com.example.app --app-name BuilderEngine
+          npx cap init BuilderEngine com.example.app --web-dir=build
         fi
       
     - name: Add Android platform (if not added)
@@ -63,6 +63,10 @@ jobs:
         if [ ! -d "android" ]; then
           npx cap add android
         fi
+      
+    - name: Build web assets
+      run: npm run build
+      if: hashFiles('package.json') != ''
       
     - name: Sync Capacitor
       run: npx cap sync android
