--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "App.js",
   "scripts": {
-    "start": "expo start"
+    "start": "npx expo start"
   },
   "dependencies": {
     "expo": "~50.0.0",
@@ -12,8 +12,6 @@
     "react-native-webview": "13.3.2",
     "@react-native-community/netinfo": "^11.0.0"
   },
-  "devDependencies": {
-    "expo-cli": "^7.0.0"
-  },
+  "devDependencies": {},
   "private": true
 }
