--- a/app.json
+++ b/app.json
@@ -4,7 +4,7 @@
     "slug": "builderengine",
     "owner": "qwalid32",
     "version": "1.0.0",
-    "sdkVersion": "50.0.0"
+    "sdkVersion": "50.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
