--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,6 +24,13 @@ jobs:
       - name: Install EAS CLI
         run: npm install -g eas-cli
 
+      - name: Configure EAS Project
+        run: |
+          eas init --id builderengine --non-interactive || echo "Already initialized"
+        env:
+          EXPO_TOKEN: qnxOqLaBzgzQfnoDpSaaIhrCAkbNJI-AkXUfmoR7
+          EAS_ACCESS_TOKEN: qnxOqLaBzgzQfnoDpSaaIhrCAkbNJI-AkXUfmoR7
+
       - name: Build Android
         run: eas build --platform android --profile production --non-interactive
         env:
