--- a/package.json
+++ b/package.json
@@ -1,17 +1,20 @@
 {
   "name": "builderengine-app",
   "version": "1.0.0",
-  "main": "App.js",
+  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "npx expo start"
+    "start": "expo start",
+    "android": "expo run:android"
   },
   "dependencies": {
-    "expo": "~50.0.0",
+    "expo": "~53.0.0",
     "react": "18.2.0",
-    "react-native": "0.73.0",
+    "react-native": "0.73.5",
     "react-native-webview": "13.2.2",
-    "@react-native-community/netinfo": "^11.0.0"
+    "@react-native-community/netinfo": "9.3.7"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "expo-cli": "^7.0.0"
+  },
   "private": true
 }
