--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@react-native-community/netinfo": "9.3.7"
   },
   "devDependencies": {
-    "expo-cli": "^7.0.0"
+    "expo-cli": "latest"
   },
   "private": true
 }
