--- a/app.json
+++ b/app.json
@@ -12,7 +12,11 @@
     "android": {
       "package": "com.builderengine.app",
       "permissions": ["INTERNET"],
-      "versionCode": 1
+      "versionCode": 1,
+      "adaptiveIcon": {
+        "foregroundImage": "./assets/adaptive-icon.png",
+        "backgroundColor": "#FFFFFF"
+      }
     }
   }
 }
