--- a/eas.json
+++ b/eas.json
@@ -6,6 +6,19 @@
   "build": {
     "production": {
       "android": {
+        "buildType": "apk",
+        "credentialsSource": "local"
+      }
+    },
+    "preview": {
+      "android": {
+        "buildType": "apk"
+      }
+    },
+    "development": {
+      "developmentClient": true,
+      "distribution": "internal",
+      "android": {
         "buildType": "apk"
       }
     }
