--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,65 +3,52 @@ name: Build Android App
 on:
   push:
     branches: [ main ]
+  workflow_dispatch: # Allow manual trigger
 
 jobs:
   build:
     name: Build Android App
     runs-on: ubuntu-latest
-
+    
     steps:
-      - name: Checkout
-        uses: actions/checkout@v3
+      - name: 🏗 Checkout repository
+        uses: actions/checkout@v4
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v3
+      - name: 🏗 Setup Node.js
+        uses: actions/setup-node@v4
         with:
           node-version: 18
+          cache: npm
 
-      - name: Install EAS CLI
-        run: npm install -g eas-cli
+      - name: 🏗 Setup Java
+        uses: actions/setup-java@v4
+        with:
+          distribution: 'temurin'
+          java-version: '17'
 
-      - name: Install dependencies
-        run: npx expo install
+      - name: 🏗 Setup EAS
+        uses: expo/expo-github-action@v8
+        with:
+          eas-version: latest
+          token: ${{ secrets.EXPO_TOKEN }}
 
-      - name: Debug JavaScript bundle
-        run: npx expo export --dev --output-dir web-dist
+      - name: 📦 Install dependencies
+        run: npm ci
 
-      - name: Configure EAS Project
+      - name: 🔧 Setup EAS project
+        run: eas init --non-interactive --force
+
+      - name: 🔑 Decode Android Keystore
         run: |
-          eas init --non-interactive --force || echo "Already initialized"
-        env:
-          EXPO_TOKEN: qnxOqLaBzgzQfnoDpSaaIhrCAkbNJI-AkXUfmoR7
-          EAS_ACCESS_TOKEN: qnxOqLaBzgzQfnoDpSaaIhrCAkbNJI-AkXUfmoR7
+          echo "${{ secrets.ANDROID_KEYSTORE }}" | base64 -d > android-keystore.jks
 
-      - name: Decode Android Keystore
+      - name: 🔧 Create credentials.json
         run: |
-          echo "${{ secrets.ANDROID_KEYSTORE }}" | base64 -d > builderengine-release-key.jks
-
-      - name: ⚙️ Write eas.json and credentials.json
-        run: |
-          cat <<EOF > eas.json
-          {
-            "cli": {
-              "version": ">=3.0.0",
-              "appVersionSource": "local"
-            },
-            "build": {
-              "production": {
-                "android": {
-                  "buildType": "apk",
-                  "credentialsSource": "local"
-                }
-              }
-            }
-          }
-          EOF
-
-          cat <<EOF > credentials.json
+          cat > credentials.json << EOF
           {
             "android": {
               "keystore": {
-                "keystorePath": "./builderengine-release-key.jks",
+                "keystorePath": "./android-keystore.jks",
                 "keystorePassword": "${{ secrets.ANDROID_KEYSTORE_PASSWORD }}",
                 "keyAlias": "${{ secrets.ANDROID_KEYSTORE_ALIAS }}",
                 "keyPassword": "${{ secrets.ANDROID_KEY_PASSWORD }}"
@@ -70,26 +57,12 @@ jobs:
           }
           EOF
 
-      - name: 👷 Metro Pre-bundle Check
-        run: |
-          npx expo install
-          npx expo doctor || true
-          npx expo prebuild --clean --no-install || true
+      - name: 🚀 Build Android APK
+        run: eas build --platform android --profile production --non-interactive --wait
 
-      - name: 🧪 Prebuild (optional but helps detect JS errors early)
-        run: |
-          npx expo install
-          npx expo doctor
-          npx expo prebuild --clean --no-install || true
-
-
-
-      - name: Build Android
-        run: eas build --platform android --profile production --non-interactive
-        env:
-          EXPO_TOKEN: qnxOqLaBzgzQfnoDpSaaIhrCAkbNJI-AkXUfmoR7
-          EAS_ACCESS_TOKEN: qnxOqLaBzgzQfnoDpSaaIhrCAkbNJI-AkXUfmoR7
-          ANDROID_KEYSTORE_PASSWORD: ${{ secrets.ANDROID_KEYSTORE_PASSWORD }}
-          ANDROID_KEY_ALIAS: ${{ secrets.ANDROID_KEYSTORE_ALIAS }}
-          ANDROID_KEY_PASSWORD: ${{ secrets.ANDROID_KEY_PASSWORD }}
-        
+      - name: 📦 Upload APK artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: builderengine-android-apk
+          path: "*.apk"
+          retention-days: 30
