--- a/app.json
+++ b/app.json
@@ -4,7 +4,7 @@
     "slug": "builderengine",
     "owner": "qwalid32",
     "version": "1.0.0",
-    "sdkVersion": "53.0.0",
+    "sdkVersion": "52.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
@@ -12,7 +12,7 @@
     "android": {
       "package": "com.builderengine.app",
       "permissions": ["INTERNET"],
-      "versionCode": 1,
+      "versionCode": 1
     }
   }
 }
