--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,7 +47,7 @@ jobs:
           ${{ runner.os }}-node-
       
     - name: Install Node dependencies
-      run: npm ci
+      run: npm install
       
     - name: Install Capacitor CLI
       run: npm install -g @capacitor/cli
