--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -52,11 +52,11 @@ jobs:
     - name: Install Capacitor CLI
       run: npm install -g @capacitor/cli
       
-    - name: Add Android platform (if not added)
-      run: |
-        if [ ! -d "android" ]; then
-          npx cap add android
-        fi
+    # - name: Add Android platform (if not added)
+    #   run: |
+    #     if [ ! -d "android" ]; then
+    #       npx cap add android
+    #     fi
       
     - name: Build web assets
       run: npm run build
